2005-08-24  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (*::emit_probe_entries): Treat NULL and "" last_errors
	both as clean early returns, not errors.
	* translate.cxx: Revamp last_error handling logic.  Remove all
	"goto out" paths from expression context.
	(visit_statement): Handle last_error exit one nesting level at a time.
	(visit_return_statement, visit_functioncall): Set/reset last_error="".
	(c_tmpcounter::visit_for_loop): New routine.
	(c_unparser::visit_foreach, visit_for_loop): Rewrite to properly
	support continue/breaks, non-local exits, (foreach) locks.
	(emit_global): Emit lock variable.
	(varlock ctor, dtor): Lock/unlock global variable.
	(varlock_w, varlock_r): New concrete subclasses.  Update all users.
	* tapset/builtin_logging.stp (exit): Don't set last_error.
	* src/testsuite/buildok/sixteen.stp: New test.
	
	* tapsets.cxx: Temporarily rolled back graydon's changes.

2005-08-23  Graydon Hoare  <graydon@redhat.com>

	* tapsets.cxx: Re-implement dwarf probe-pattern resolution.

2005-08-22  Frank Ch. Eigler  <fche@elastic.org>

	PR systemtap/1134
	* elaborate.h (module_fds): New member in systemtap_session.
	* tapsets.cxx (dwarf_derived_probe ctor): Open /sys/module/$MOD/.text
	for the duration of a systemtap session, to lock module in memory.

2005-08-21  Frank Ch. Eigler  <fche@redhat.com>

	PR systemtap/1195, systemtap/1193
	* elaborate.cxx (alias_expansion_builder): Set new block token.
	* parse.cxx (parse_symbol): Set new target_symbol token.
	* runtest.sh: Store more pertinent failure data.
	* tapsets.cxx (emit_probe_entries): Rewrite error-handling path.
	* translate.cxx (emit_common_header): Goodbye errorcount, hello
	last_error & last_stmt.
	(c_unparser::visit_statement): New "header" for all other stmts.
	(c_assignop, visit_binary_expression): Adapt to last_error.
	* tapset/builtin_logging.stp: Adapt to last_error.

2005-08-19  Frank Ch. Eigler  <fche@elastic.org>

	PR systemtap/1213