@@ -1,5 +1,10 @@
 2005-08-24  Frank Ch. Eigler  <fche@elastic.org>
 
+	* translate.cxx (emit_global, emit_module_init): Use 2.6.9-compatible
+	rwlock initialization.
+
+2005-08-24  Frank Ch. Eigler  <fche@elastic.org>
+
 	* tapsets.cxx (*::emit_probe_entries): Treat NULL and "" last_errors
 	both as clean early returns, not errors.
 	* translate.cxx: Revamp last_error handling logic.  Remove all
